[package]
name = "pallet-transaction-payment-totem"
version = "1.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
description = "FRAME pallet to manage transaction payments adapted for Totem"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.36' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.36' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', version = "7.0.0", default-features = false, branch = 'polkadot-v0.9.36' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', version = "7.0.0", default-features = false, branch = 'polkadot-v0.9.36' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = "7.0.0", default-features = false, branch = 'polkadot-v0.9.36' }
sp-std = { git = 'https://github.com/paritytech/substrate.git', version = "5.0.0", default-features = false, branch = 'polkadot-v0.9.36' }

pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.36' }
totem-primitives = { path = '../../primitives', default-features = false }
pallet-accounting = { default-features = false, path = "../accounting" }

[dev-dependencies]
serde_json = "1.0.85"
pallet-balances = { path = "../balances", package = "pallet-balances-totem" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-accounting/std",
]
try-runtime = ["frame-support/try-runtime"]
