[package]
name = "pallet-transaction-payment-totem"
version = "1.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
description = "FRAME pallet to manage transaction payments adapted for Totem"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
smallvec = "1.7.0"

sp-core = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.18', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.18', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.18', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0", branch = 'polkadot-v0.9.18', default-features = false }

frame-support = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.18', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.18', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.18', default-features = false }
totem-primitives = { path = '../../primitives', default-features = false }
pallet-accounting = { version = "1.1.0", default-features = false, path = "../accounting" }

[dev-dependencies]
serde_json = "1.0.74"
# pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
pallet-balances = { version = "1.1.0", path = "../balances", package = "pallet-balances-totem" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-accounting/std",
]
try-runtime = ["frame-support/try-runtime"]
