[package]
name = "pallet-asset-tx-payment"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "pallet to manage transaction payments in assets"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate dependencies
# sp-core = { version = "6.0.0", default-features = false, path = "../../../primitives/core" }
# sp-io = { version = "6.0.0", default-features = false, path = "../../../primitives/io" }
# sp-runtime = { version = "6.0.0", default-features = false, path = "../../../primitives/runtime" }
# sp-std = { version = "4.0.0", default-features = false, path = "../../../primitives/std" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.28', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.28', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.28', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0", branch = 'polkadot-v0.9.28', default-features = false }

# frame-support = { version = "4.0.0-dev", default-features = false, path = "../../support" }
# frame-system = { version = "4.0.0-dev", default-features = false, path = "../../system" }
# pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = ".." }
frame-support = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.28', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.28', default-features = false }
pallet-transaction-payment = { path = "../../transaction-payment", package = "pallet-transaction-payment-totem", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

[dev-dependencies]
serde_json = "1.0.79"

# sp-storage = { version = "6.0.0", default-features = false, path = "../../../primitives/storage" }
sp-storage = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", branch = 'polkadot-v0.9.28', default-features = false }

# pallet-assets = { version = "4.0.0-dev", path = "../../assets" }
# pallet-authorship = { version = "4.0.0-dev", path = "../../authorship" }
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.28', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", branch = 'polkadot-v0.9.28', default-features = false }

# pallet-balances = { version = "4.0.0-dev", path = "../../balances" }
pallet-balances = { version = "1.1.1", path = "../../balances", package = "pallet-balances-totem" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"pallet-transaction-payment/std",
]
try-runtime = ["frame-support/try-runtime"]
