[package]
name = "pallet-asset-tx-payment"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "pallet to manage transaction payments in assets"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate dependencies
sp-core = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", default-features = false, branch = 'polkadot-v0.9.29' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", default-features = false, branch = 'polkadot-v0.9.29' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", default-features = false, branch = 'polkadot-v0.9.29' }
sp-std = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0", default-features = false, branch = 'polkadot-v0.9.29' }

frame-support = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.29' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.29' }
pallet-transaction-payment = { path = "../../transaction-payment", package = "pallet-transaction-payment-totem", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

[dev-dependencies]
serde_json = "1.0.85"

sp-storage = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", default-features = false, branch = 'polkadot-v0.9.29' }

pallet-assets = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.29' }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', version = "4.0.0-dev", default-features = false, branch = 'polkadot-v0.9.29' }

pallet-balances = { path = "../../balances", package = "pallet-balances-totem" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"pallet-transaction-payment/std",
]
try-runtime = ["frame-support/try-runtime"]
