[package]
name = "pallet-transaction-payment-rpc-runtime-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
pallet-transaction-payment = { path = "../transaction-payment", package = "pallet-transaction-payment-totem", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false , branch = "polkadot-v0.9.36" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = "6.0.0", default-features = false, branch = 'polkadot-v0.9.36' }

[features]
default = ["std"]
std = [
	"codec/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-runtime/std",
]
